--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -55,10 +55,10 @@
 </head>
 <body>
 <header>
-    <h1>Welcome to Automate X</h1>
+    <h1>Welcome to Store ISTAD</h1>
 </header>
 <main>
-    <p>Empowering your DevOps journey with automation and efficiency.</p>
+    <p>Ecommerce Store .</p>
 
     <!-- Direct link to Swagger UI with /index.html -->
     <a th:href="@{/swagger-ui/index.html}" target="_blank">
